--- a/css/ceylon-sang.css
+++ b/css/ceylon-sang.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-    font-family: 'Source Sans 3', sans-serif !important;
+    font-family: 'Inter', sans-serif !important;
     overflow-x: hidden;
     /* Prevent horizontal scroll */
     -webkit-overflow-scrolling: touch;
@@ -22,7 +22,7 @@ h6,
 .heading-section h2,
 .ftco-heading-2,
 .navbar-brand {
-    font-family: 'Libre Baskerville', serif !important;
+    font-family: 'Poppins', sans-serif !important;
     font-weight: 700;
 }
 
