--- a/css/ceylon-sang.css
+++ b/css/ceylon-sang.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-    font-family: 'Inter', sans-serif !important;
+    font-family: 'Marcellus', serif !important;
     overflow-x: hidden;
     /* Prevent horizontal scroll */
     -webkit-overflow-scrolling: touch;
